<resources>
    <string name="app_name">InventoryApp</string>

    <string name="empty_inventory_msg">Add an item for the inventory</string>

    <string name="menu_delete_item">Delete all items</string>

    <string name="editor_image_required">You need to upload an image</string>

    <string name="editor_insert_product_failed">Product couldn\'t be inserted</string>

    <string name="editor_insert_product_successful">Product was successfully inserted</string>

    <string name="editor_update_product_successful">Product was successfully updated</string>

    <string name="editor_update_product_failed">Product couldn\'t be updated</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="add_product_title">Add Product</string>

    <string name="product_detail_title">Product</string>

    <string name="add">Add Item</string>

    <string name="product_name">Item: </string>

    <string name="product_stock">In Stock: </string>

    <string name="product_price">Price: </string>

    <string name="item_sold">Sold: </string>

    <string name="sup_email">Contact Info: </string>

    <string name="sell_btn">Make Sale</string>

    <string name="product_image_description">Product Image</string>

    <string name="add_product_name_hint">Product name here</string>

    <string name="add_product_price_hint">Product Price</string>

    <string name="add_product_quantity">Product Quantity</string>

    <string name="add_supplier_contact">Supplier email</string>

    <string name="menu_alert_title">Delete All Data</string>

    <string name="menu_delete_warning">Are you sure you want to delete your entire inventory?</string>

    <string name="menu_confirm_btn">Confirm</string>

    <string name="menu_cancel_btn">Cancel</string>
</resources>
