<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_product_text_view"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/edit_item_name"
                style="@style/add_product_edit_text"
                android:hint="@string/add_product_name_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_product_text_view"
                android:text="@string/product_price" />

            <EditText
                android:id="@+id/edit_item_price"
                style="@style/add_product_edit_text"
                android:hint="@string/add_product_price_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/availability_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_product_text_view"
                android:text="@string/product_stock" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Button
                    android:id="@+id/decrease_count_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="-" />
                <EditText
                    android:id="@+id/edit_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1"
                    android:textAppearance="?android:textAppearanceMedium"/>
                <Button
                    android:id="@+id/increase_count_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_product_text_view"
                android:text="@string/sup_email" />

            <EditText
                android:id="@+id/edit_sup_contact"
                style="@style/add_product_edit_text"
                android:hint="@string/add_supplier_contact" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Image" />

            <ImageView
                android:id="@+id/image_view"
                style="@style/add_product_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/save_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Save product" />

        <LinearLayout
            android:id="@+id/edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_btn_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Order"/>
            <Button
                android:id="@+id/detail_btn_delete_prod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delete"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
